welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: reassignment to val
      return die1=1
                 ^withoutDoubles:6: error: reassignment to val
      return die2=1
                 ^withoutDoubles:7: error: reassignment to val
    } else return die1=die1+1
                      ^